# declasp

./: README.md  declare_model.json  example_conformance_checking.py  example_query_checking.py  example_satisfiability.py  pyproject.toml
declasp/: __init__.py  cli.py  exceptions.py  utils.py
declasp/declare/: __init__.py  constraint.py  declare_constraints.py  model.py  parse.py
declasp/log/: __init__.py  log.py
declasp/tasks/: __init__.py  conformance_checking.py  encoding_paths.py  query_checking.py  satisfiability.py
declasp/tasks/encodings/: conformance_checking.lp  declare.lp  query_checking.lp  satisfiability.lp
